Change logo image path in config file
Updated logo path to reflect new image file.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Pramod Misra # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/Pramod_Misra picture .png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Solving AI Chain of thought problem 
   <br><br>
