Update description in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/Pramod_Misra picture .png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Solving AI Chain of thought problem 
   <br><br>
-  Second description 
+  Simplifying insurance using AI and machine learning
   <br><br>
   <a href="https://www.linkedin.com/in/pramodmisra/">View My LinkedIn Profile</a> 
   
